tests/good/functions/2.moc
void main() {
    main();
}

void foo(int a) {
    foo(a);
}

