tests/bad/types/void.moc
int main() {
    void a;
}

int foo(void b) {
}

